--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/typography": "^0.5.13",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
